fixes #316
Added testmodes

http://jdownloader.net:8081/de/knowledge/wiki/development/translation/translate-jdownloader2

git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@7398 ebf7c1c2-ba36-0410-9fe8-c592906822b4